LITT Changelog:
===============
 * 2019-09-27: Merged add-bg into set-bg and add-stg into set-stg. Clarified help for add/modify actions.
 * 2019-09-26: Simplified help.
 * 2019-09-25: Removed aa listing, can just modify the aa alias for same effect. (Not so for bb due to special where handling)
 * 2019-09-25: Simplified unquote, now also unquotes partial (either end) quotes.
 * 2019-09-25: Moved quote and colWidth inside PeriodColumn, only used there and assumed to be.
 * 2019-09-24: Now has a single toInt template for all number conversions thanks to constexpr if.
 * 2019-09-24: Added toStr for brevity.
 * 2019-09-24: Grouped all Litt members together. Adjusted help.
 * 2019-09-24: The brmy listing now uses the last five years by default, like the *bcy listings.
 * 2019-09-23: Factored out fmtv function from std_string_fmt_impl macro thanks to va_copy.
 * 2019-09-23: Renamed short name "btst" to "bs" for naming consistency.
 * 2019-09-23: Removed redundant listings: ll, ss, gg, soo, cc. 
 * 2019-09-23: Added -i option for including additional columns and adding non-null to where condition.
 * 2019-09-23: Make where condition handling more robust and clear.
 * 2019-09-21: Removed unsigned arguments, always use int. Use toInt instead of std::stoi (control the error message).
 * 2019-09-21: Cleaned up arg functions.
 * 2019-09-21: Tigthen up addBook and Litt constructor, allow empty -dlist separator. Misc other minor changes.
 * 2019-09-20: Uses comma operator instead of " JOIN " for joining tables in hard-coded queries to save space. Tighten up titleStory query.
 * 2019-09-20: Made DWL columnInfo a bit more readable.
 * 2019-09-20: Clean up defines for columnInfos. Use more macros to check syntax, no need to undef. Factored out DR.
 * 2019-09-20: Replaced calcMaxWidth goto-loop in addBook with slightly less tricky for-loop.
 * 2019-09-20: Tigthen up runOutputQuery, executeUserSql and executeSql.
 * 2019-09-19: Can now pass r-value queries to runOutputQuery! ;)